config/zitadel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zitadel
  annotations:
    cert-manager.io/cluster-issuer: bunnycdn-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: auth.herbstfest.r-und-t.app
    http:
      paths:
      - path: /ui/v2/login
        pathType: Prefix
        backend:
          service:
            name: zitadel-login
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zitadel
            port:
              number: 8080
  tls:
  - hosts:
    - auth.herbstfest.r-und-t.app
    secretName: zitadel-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: zitadel-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zitadel-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: rundt-zitadel-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: auth.herbstfest.r-und-t.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zitadel
            port:
              number: 8080
